<resources>
    <string name="app_name">PhoneBackground</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_all_content">AllContent</string>
    <string name="title_flux">Flux</string>
    <string name="title_decouvrir">Découvrir</string>
    <string name="title_transferer">Transférer</string>
    <string name="title_activites">Activités</string>
    <string name="title_account">Account</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="se_connecter">Se connecter</string>
    <string name="fermer">Fermer</string>
    <string name="facebook_app_id">278492706254433</string>
    <string name="fb_login_protocol_scheme">fb278492706254433</string>
    <string name="title_activity_set_account_info">setAccountInfo</string>
</resources>
