<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_navigation_flux"
        android:icon="@drawable/baseline_receipt_black_24dp"
        android:title="@string/title_flux" />

    <item
        android:id="@+id/bottom_navigation_decouvrir"
        android:icon="@drawable/compass"
        android:title="@string/title_decouvrir" />

    <item
        android:id="@+id/bottom_navigation_transferer"
        android:icon="@drawable/baseline_save_alt_black_24dp"
        android:title="@string/title_transferer" />

    <item
        android:id="@+id/bottom_navigation_activites"
        android:icon="@drawable/bell"
        android:title="@string/title_activites" />
ç
    <item
        android:id="@+id/bottom_navigation_profile"
        android:icon="@drawable/account"
        android:title="@string/title_account" />


</menu>
